[project]
name = "a2a-helloworld"
version = "0.2.0"
description = "HelloWorld agent example that only returns Messages"
readme = "README.md"
license = "MIT"
authors = [
    { name = "David Gwartney", email = "david.gwartney@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[project.urls]
Homepage = "https://github.com/dgwartney/a2a-helloworld"
Repository = "https://github.com/dgwartney/a2a-helloworld"
Issues = "https://github.com/dgwartney/a2a-helloworld/issues"

[project.scripts]
agent = "a2a_helloworld.agent:main"
client = "a2a_helloworld.client:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_helloworld"]
